// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar component should match the snapshot 1`] = `
<Fragment>
  <button
    className="short-search-btn"
    onClick={[Function]}
  >
    <img
      alt="search"
      onClick={[Function]}
      src="search.svg"
    />
  </button>
</Fragment>
`;

exports[`SearchBar component should match the snapshot if btn is clicked 1`] = `
<Fragment>
  <form
    className="search-form"
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      placeholder="Search"
      type="text"
      value=""
    />
    <img
      alt="search"
      onClick={[Function]}
      src="search.svg"
    />
  </form>
</Fragment>
`;

exports[`SearchBar component should match the snapshot if btn is clicked and query is submitted 1`] = `
<Fragment>
  <form
    className="search-form"
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      placeholder="Search"
      type="text"
      value="sth"
    />
    <img
      alt="close"
      onClick={[Function]}
      src="close.svg"
    />
  </form>
</Fragment>
`;
